objects/LAT_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(TEXT(MONTH(StartDate__c)))=0, 0,20) + IF( LEN(TEXT( ContractTerm__c ))=0, 0,20) + IF( LEN( BillingCity__c ) = 0, 0,20) + IF( LEN( CustomerSignedId__c) = 0, 0,20) + IF( ISPICKVAL(  OwnerExpirationNotice__c ,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_de_assinatura_do_distrato_cliente__c</fullName>
        <label>Data de assinatura do distrato - cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_de_cumprimento_contrapartidas__c</fullName>
        <label>Data de cumprimento contrapartidas</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_de_inicio_da_vigencia_da_alteracao__c</fullName>
        <label>Data de início da vigência da alteração</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_de_recebimento_carta_distrato__c</fullName>
        <label>Data de recebimento carta distrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_de_vigencia_do_distrato__c</fullName>
        <label>Data de vigência do distrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digito_conta_corrente__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dígito conta corrente</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distrato_Signatario_da_empresa_2__c</fullName>
        <label>Distrato - Signatário da empresa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distrato_Signatario_da_empresa__c</fullName>
        <label>Distrato - Signatário da empresa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distrato_Signatario_do_cliente_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distrato - Signatário do cliente</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LAT Contratos (Distrato - Signatário do cliente)</relationshipLabel>
        <relationshipName>LAT_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distrato_Signatario_do_cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distrato - Signatário do cliente</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LAT Contratos (Distrato - Signatário do cliente)</relationshipLabel>
        <relationshipName>LAT_Contract_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Documentacao_ok__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentação ok</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domecq_Tradicional_periodo__c</fullName>
        <formula>Volume_Domecq_Tradicional__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domecq Tradicional contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Encaminhado_para_assinatura__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encaminhado para assinatura</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <formula>StartDate__c +  (ContractTerm__c * 30.4166)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_de_Cobranca__c</fullName>
        <formula>Account__r.Revenue_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End de Faturamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Espumante_Mumm_Cuvee__c</fullName>
        <label>Espumante - Mumm Cuvee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Espumante_Mumm_Petit__c</fullName>
        <label>Espumante - Mumm Petit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Champagne__c</fullName>
        <label>Champagne</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Espumantes__c</fullName>
        <label>Espumantes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Rum_Importado__c</fullName>
        <label>Rum Importado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Rum_Nacional__c</fullName>
        <label>Rum Nacional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Tequila__c</fullName>
        <label>Tequila Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Tequila_super_premium__c</fullName>
        <label>Tequila Super Premium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Vinhos__c</fullName>
        <label>Vinhos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Vodka_Super_Premium__c</fullName>
        <label>Vodka Super Premium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Vodkas_Importadas__c</fullName>
        <label>Vodkas Importadas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Vodkas_Nacionais__c</fullName>
        <label>Vodkas Nacionais</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Whiskie_Bourbon__c</fullName>
        <label>Whiskie Bourbon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Whiskie_Irlandes__c</fullName>
        <label>Whiskie Irlandês</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Whisky_12_anos__c</fullName>
        <label>Whisky 12 anos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Whisky_Engarrafado__c</fullName>
        <label>Whisky Engarrafado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Whisky_Nacional__c</fullName>
        <label>Whisky Nacional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Whisky_Std__c</fullName>
        <label>Whisky Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_promoc_Whisky_Super_Premium__c</fullName>
        <label>Whisky Super Premium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Champagne__c</fullName>
        <label>Champagne</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Espumantes__c</fullName>
        <label>Espumantes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Rum_Importado__c</fullName>
        <label>Rum Importado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Rum_Nacional__c</fullName>
        <label>Rum Nacional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Tequila__c</fullName>
        <label>Tequila Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Tequila_super_premium__c</fullName>
        <label>Tequila Super Premium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Vinhos__c</fullName>
        <label>Vinhos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Vodka_Super_Premium__c</fullName>
        <label>Vodka Super Premium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Vodkas_Importadas__c</fullName>
        <label>Vodkas Importadas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Vodkas_Nacionais__c</fullName>
        <label>Vodkas Nacionais</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Whiskie_Bourbon__c</fullName>
        <label>Whiskie Bourbon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Whiskie_Irlandes__c</fullName>
        <label>Whiskie Irlandês</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Whisky_12_anos__c</fullName>
        <label>Whisky 12 anos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Whisky_Engarrafado__c</fullName>
        <label>Whisky Engarrafado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Whisky_Nacional__c</fullName>
        <label>Whisky Nacional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Whisky_Std__c</fullName>
        <label>Whisky Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusiv_visual_Whisky_Super_Premium__c</fullName>
        <label>Whisky Super Premium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusividade__c</fullName>
        <label>Exclusividade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100% Portfolio</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
                <value>
                    <fullName>Por Categoria (pf informe)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fase__c</fullName>
        <label>Fase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pré-estudo</fullName>
                    <default>true</default>
                    <label>Pré-estudo</label>
                </value>
                <value>
                    <fullName>Estudo</fullName>
                </value>
                <value>
                    <fullName>Oportunidade</fullName>
                </value>
                <value>
                    <fullName>Contrato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Festas_Data1__c</fullName>
        <label>Festas - Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Festas_Data2__c</fullName>
        <label>Festas - Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Festas_Data3__c</fullName>
        <label>Festas - Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Festas_Eventos_Coment_rio__c</fullName>
        <label>Festas / Eventos - Comentário</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Festas_Eventos__c</fullName>
        <label>Festas / Eventos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Festas_Marcas6__c</fullName>
        <label>Festas - Marca</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Festas_Marcas_1__c</fullName>
        <label>Festas - Marcas</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Festas_Marcas_2__c</fullName>
        <label>Festas - Marcas</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Festas_Marcas_3__c</fullName>
        <label>Festas - Marcas</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Festas_Observacao1__c</fullName>
        <label>Festas - Observação</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Festas_Observacao2__c</fullName>
        <label>Festas - Observação</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Festas_Observacao3_c__c</fullName>
        <label>Festas - Observação</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Festas_Observacao4__c</fullName>
        <label>Festas - Observação</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Festas_Quantidade__c</fullName>
        <label>Festas - Quantidade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finalidades_Acoes__c</fullName>
        <label>Finalidades / Ações</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aniversário</fullName>
                </value>
                <value>
                    <fullName>Ativação</fullName>
                </value>
                <value>
                    <fullName>Condições Comerciais</fullName>
                </value>
                <value>
                    <fullName>Enxoval</fullName>
                </value>
                <value>
                    <fullName>Estrutural</fullName>
                </value>
                <value>
                    <fullName>Incentivos a clientes</fullName>
                </value>
                <value>
                    <fullName>Introdução a novos produtos</fullName>
                </value>
                <value>
                    <fullName>KA - Contratos</fullName>
                </value>
                <value>
                    <fullName>Materiais</fullName>
                </value>
                <value>
                    <fullName>On Trade - Ativação + Materiais Taylor Made</fullName>
                </value>
                <value>
                    <fullName>On Trade - Ativação + Material POS</fullName>
                </value>
                <value>
                    <fullName>On Trade - Contratos</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos - Contratos</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos - Ativação</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos - material</fullName>
                </value>
                <value>
                    <fullName>Ponto Extra</fullName>
                </value>
                <value>
                    <fullName>Promoção de preço a consumidor</fullName>
                </value>
                <value>
                    <fullName>Promotoras</fullName>
                </value>
                <value>
                    <fullName>Tabloides</fullName>
                </value>
                <value>
                    <fullName>Treinamento</fullName>
                </value>
                <value>
                    <fullName>Value Added Packs (VAP)</fullName>
                </value>
                <value>
                    <fullName>Visibilidade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fluxo01_Aprovado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fluxo01 Aprovado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fluxo02_Aprovado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fluxo02 Aprovado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fornecedor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fornecedor</label>
        <referenceTo>Fornecedor__c</referenceTo>
        <relationshipLabel>LAT_Contract</relationshipLabel>
        <relationshipName>LAT_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fornecedor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fornecedor</label>
        <referenceTo>Fornecedor__c</referenceTo>
        <relationshipLabel>LAT_Contract</relationshipLabel>
        <relationshipName>LAT_Contract_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fornecedor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fornecedor</label>
        <referenceTo>Fornecedor__c</referenceTo>
        <relationshipLabel>LAT - Contratos (Fornecedor)</relationshipLabel>
        <relationshipName>LAT_Contract3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fornecedor_CNPJ_1P__c</fullName>
        <formula>Fornecedor_1__r.CNPJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNPJ 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fornecedor_CNPJ_2P__c</fullName>
        <formula>Fornecedor_2__r.CNPJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNPJ 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fornecedor_CNPJ_3P__c</fullName>
        <formula>Fornecedor_3__r.CNPJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNPJ 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gerente_Regional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gerente Regional</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Contratos_gerenciados</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gerente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Recebe o gerente do usuário (proprietário) para utilização no envio de email de alerta. Campo copiado pela trigger ContratoCopiaIdGerenteRegionalArea.</description>
        <label>Gerente</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gerente_de_area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gerente de área</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Contratos_gerenciados_area</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gin_Beefeater__c</fullName>
        <label>Gin - Beefeater</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HavanaClubAnejoReserva_pdo_c__c</fullName>
        <formula>Volume_Havana_Club_Anejo_Reserva__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Havana Club Anejo Reserva período</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Havana_Club_3_Anos_periodo__c</fullName>
        <formula>Volume_Havana_Club_3_Anos__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Havana Club 3 Anos contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Havana_Club_7_anos_periodo__c</fullName>
        <formula>Volume_Havana_Club_7_anos__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Havana Club 7 anos contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Havana_Club_Anejo_Reserva_periodo__c</fullName>
        <formula>Volume_Havana_Club_Anejo_Reserva__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Havana Club Anejo Reserva contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_tipo_de_registro_alteracao__c</fullName>
        <formula>IF(  ISPICKVAL(Account__r.Channel__c, &quot;On Trade&quot;), &quot;01230000001BeHz&quot;, &quot;01230000001BeHw&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID tipo de registro alteração</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_tipo_de_registro_cancelamento__c</fullName>
        <formula>IF( ISPICKVAL(Account__r.Channel__c, &quot;On Trade&quot;), &quot;012Q00000000aD7&quot;, &quot;012Q00000000aD2&quot; )</formula>
        <label>ID tipo de registro cancelamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentivo_da_Brigada_Comentario__c</fullName>
        <label>Incentivo da Brigada - Comentário</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentivo_da_Brigada__c</fullName>
        <label>Incentivo da Brigada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Informacoes_nao_preenchidas_ROI_Negativo__c</fullName>
        <formula>IF(ROI_Perc_ROI_formula__c &lt; 0 &amp;&amp; isblank(ROI_Comentarios_Negativo__c), 
&apos;Por favor, jusifique o valor negativo de ROI no campo &quot;Comentário ROI Negativo&quot;&apos;, 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informações não preenchidas ROI Negativo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingressos_por_abertura_da_Parceira__c</fullName>
        <label>Ingressos por abertura da Parceira</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>